--- a/time_entry.glade
+++ b/time_entry.glade
@@ -3,6 +3,7 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="gtkBoxTimeEntryWrapper">
+    <property name="height_request">30</property>
     <property name="visible">True</property>
     <property name="can_focus">True</property>
     <property name="margin_left">5</property>
@@ -15,7 +16,13 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="editable">False</property>
+        <property name="wrap_mode">char</property>
+        <property name="left_margin">2</property>
+        <property name="right_margin">2</property>
+        <property name="top_margin">2</property>
+        <property name="bottom_margin">2</property>
         <property name="cursor_visible">False</property>
+        <property name="input_purpose">alpha</property>
         <property name="monospace">True</property>
         <signal name="focus-in-event" handler="edit_text" swapped="no"/>
       </object>
@@ -52,39 +59,70 @@
       </packing>
     </child>
     <child>
-      <object class="GtkEventBox">
+      <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="homogeneous">True</property>
         <child>
-          <object class="GtkImage" id="gtkImageEditTimeEntry">
+          <object class="GtkEventBox" id="gtkEventBoxToggleHoursCountTimeEntry">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="stock">gtk-edit</property>
+            <signal name="button-press-event" handler="toggle_hours_count" swapped="no"/>
+            <child>
+              <object class="GtkImage">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="stock">gtk-media-play</property>
+              </object>
+            </child>
           </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkEventBox">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <child>
+              <object class="GtkImage" id="gtkImageEditTimeEntry">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="stock">gtk-edit</property>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkEventBox" id="gtkEventBoxDeleteTimeEntry">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <child>
+              <object class="GtkImage">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="stock">gtk-close</property>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
         </child>
       </object>
       <packing>
         <property name="expand">False</property>
         <property name="fill">True</property>
-        <property name="position">4</property>
-      </packing>
-    </child>
-    <child>
-      <object class="GtkEventBox" id="gtkEventBoxDeleteTimeEntry">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <child>
-          <object class="GtkImage">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="stock">gtk-close</property>
-          </object>
-        </child>
-      </object>
-      <packing>
-        <property name="expand">False</property>
-        <property name="fill">True</property>
-        <property name="position">5</property>
+        <property name="position">3</property>
       </packing>
     </child>
   </object>
