--- a/legacy_files/main.glade
+++ b/legacy_files/main.glade
@@ -31,7 +31,7 @@ Author: Ramon Moraes <ramon@vyscond.io>
   <requires lib="webkit2gtk" version="2.12"/>
   <!-- interface-license-type mit -->
   <!-- interface-authors Ramon Moraes <ramon@vyscond.io> -->
-  <object class="GtkDialog" id="dialogTimeEntryRemoval">
+  <object class="GtkDialog" id="dialogTimeEntryDeleteConfirmation">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Time Entry Removal</property>
     <property name="resizable">False</property>
