--- a/xharvest/data/glade/main2.glade
+++ b/xharvest/data/glade/main2.glade
@@ -911,7 +911,7 @@ Author: Ramon Moraes <ramon@vyscond.io>
                 <child>
                   <object class="GtkListBox" id="listBoxTimeEntries">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <property name="can_focus">False</property>
                     <property name="selection_mode">none</property>
                   </object>
                 </child>
