--- a/xharvest/data/glade/login.glade
+++ b/xharvest/data/glade/login.glade
@@ -6,11 +6,11 @@
   <object class="GtkWindow" id="root">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">xHarvest Auth</property>
+    <property name="modal">True</property>
     <property name="window_position">center</property>
     <property name="default_width">604</property>
     <property name="default_height">640</property>
-    <property name="type_hint">dialog</property>
-    <signal name="destroy" handler="on_quit" swapped="no"/>
+    <property name="urgency_hint">True</property>
     <child type="titlebar">
       <placeholder/>
     </child>
