--- a/xharvest/data/glade/main_window.glade
+++ b/xharvest/data/glade/main_window.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkWindow" id="main">
+  <object class="GtkWindow" id="root">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">xHarvest</property>
     <property name="default_width">260</property>
