--- a/xharvest/data/glade/login.glade
+++ b/xharvest/data/glade/login.glade
@@ -3,6 +3,9 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <requires lib="webkit2gtk" version="2.12"/>
+  <object class="WebKitSettings" id="settings1">
+    <property name="user_agent">Mozilla/5.0 (X11; Fedora; Linux x86_64) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0 Safari/605.1.15</property>
+  </object>
   <object class="GtkWindow" id="root">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">xHarvest Auth</property>
@@ -27,8 +30,8 @@
               <object class="WebKitWebView" id="webkitwebviewOAuth2Authorization">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="settings">settings1</property>
                 <property name="is_ephemeral">True</property>
-                <property name="editable">True</property>
                 <child>
                   <placeholder/>
                 </child>
