--- a/xharvest/data/glade/settings.glade
+++ b/xharvest/data/glade/settings.glade
@@ -170,11 +170,18 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel">
+              <object class="GtkEventBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Preferences ...</property>
+                <signal name="button-press-event" handler="on_show_preferences" swapped="no"/>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="halign">start</property>
+                    <property name="label" translatable="yes">Preferences ...</property>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
