--- a/xharvest/data/glade/time_summary.glade
+++ b/xharvest/data/glade/time_summary.glade
@@ -45,6 +45,8 @@
         <child>
           <object class="GtkGrid" id="grid">
             <property name="can_focus">False</property>
+            <property name="row_spacing">10</property>
+            <property name="column_spacing">10</property>
             <property name="row_homogeneous">True</property>
             <property name="column_homogeneous">True</property>
             <child>
@@ -52,6 +54,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">2</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
@@ -90,6 +93,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">2</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
@@ -128,6 +132,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">2</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
@@ -166,6 +171,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">2</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
