--- a/xharvest/data/glade/login_personal_access_token.glade
+++ b/xharvest/data/glade/login_personal_access_token.glade
@@ -4,6 +4,9 @@
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="root">
     <property name="can_focus">False</property>
+    <property name="modal">True</property>
+    <property name="window_position">center</property>
+    <property name="urgency_hint">True</property>
     <child type="titlebar">
       <placeholder/>
     </child>
